--- a/VRChat/12/1230312.html
+++ b/VRChat/12/1230312.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "fRZ/qHeQMnj+4IjTe3rqxd3qDmi90J1oF13bz1154h4="></script>
+    "6qb15tXnUCLYpWXQ5w8+lwHaCOZ8P0NLJzexfcCBKME="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"MOA-002 流星のスピカ ※販売停止中","description":"MOA-002 流星のスピカ\n\nスピカ=クリスノヴァ(Spica=Chrisnova)\n女性 16歳 身長152cm 体重45kg\n漁村に産まれた心優しき少女。ノエルという妹のため冒険者になり、モンスターを狩る事で生計を立てている。\nある日 村を襲った\"深緑の魔獣\"を討伐し、その骨や皮から作った装備を着用している。\n二刀流を得意とし、右手に深緑の魔獣の骨と鱗から作られた剣デーモンスケイルを、左手には刀身を青く染めたマインゴーシュを持ち戦う。\n\n△ポリゴン数24670(合計) マテリアル数11(合計) テクスチャー数8(合計)\n・素体付きです。\n・ボーンの構造はUnityのHumanoidに対応しています。\n・表情やリップシンク、アニメーションが同梱されていて、各種設定済みです。\n・Dynamicboneを使用する事を想定しています(コンポーネント設定済み)。\n\n●内容物\n・FBXデータ6個(メイン、素体のみ、デーモンスケイル、マインゴーシュ、スピカのマフラー、彗星のブローチ)。\n・テクスチャー8枚(PNG)。\n・UV展開図8枚(PNG)。\n・マスクテクスチャー3枚(PNG)。\n・Prefabs入りUnitypackageデータ1個(Prefabsはメインと素体のみの2種類が入っています)。\n・Readme1枚。\n\n●利用規約\n・再配布禁止。\n・自作と偽る行為の禁止。\n・商用利用の禁止。\n・収益を伴うものを含めた動画や画像への映り込みの許可。\n・改変自由。\n・その他、日本の法に反しない行為の許可。\n\n●注意事項\n・本品はVRChatでの使用を想定しています。\n・本品はVRChatにおけるフルトラッキングでの使用には向いておりません。\n・本品に使用されている｢MnMrShader1_3｣の作者は みに様であり、ライセンス(MITライセンス)はReadmeに記載しています。\n・本品を使用した事によるトラブルに関して作者は一切の責任を負いません。\n・何か問題やご不明な点等ございましたら作者までお気軽にご連絡ください。\n\n作者連絡先: https://twitter.com/Marun_Spirit\n\nDynamicbone: https://assetstore.unity.com/packages/tools/animation/dynamic-bone-16743","url":"https://booth.pm/ja/items/1230312","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8ff6fcbd-9bfc-47c9-869c-9f7e8280f01b/i/1230312/36e3f6b8-f6db-41c0-b338-77d89a47fb53_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fRZ/qHeQMnj+4IjTe3rqxd3qDmi90J1oF13bz1154h4="></script>
+    nonce="6qb15tXnUCLYpWXQ5w8+lwHaCOZ8P0NLJzexfcCBKME="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -613,7 +613,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
